--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,9 @@ inputs:
   project-name:
     description: 'AWS CodeBuild Project Name'
     required: true
+  source-version-override:
+    description: 'Source Version Override'
+    required: false
   buildspec-override:
     description: 'Buildspec Override'
     required: false
@@ -14,8 +17,8 @@ inputs:
     description: 'Comma separated list of environment variables to send to CodeBuild'
     required: false
 outputs:
-  aws-build-id:
-    description: 'The AWS CodeBuild Build ID for this build.'
+  aws-build-number:
+    description: 'The AWS CodeBuild Build Number for this build.'
 runs:
   using: 'node12'
   main: 'dist/index.js'
